# rust_api_task

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  startScript.sh
database/: schemal.sql
src/: Cargo.toml
src/src/: domain.rs  main.rs
src/src/controller/: task_controller.rs
src/src/domain/: model.rs  task.rs
src/src/repository/: task_repository.rs
src/src/route/: route.rs
src/src/service/: task_service.rs
